Serving of images hacked on client side

--- a/client/web/templates/hand.html
+++ b/client/web/templates/hand.html
@@ -1,5 +1,5 @@
 <div class='hand'>
 	{{#.}}
-		<img class='card' src='/resources/images/{{.}}'/>
+		<img class='card' src='/resources/images/mdpi/{{.}}.png'/>
 	{{/.}}
 </div>
