--- a/client/web/templates/player.html
+++ b/client/web/templates/player.html
@@ -2,7 +2,7 @@
 	<h1>
 		{{username}}
 		{{#characters}}
-			<img class='character' src='/resources/images/{{.}}?dpi=xldpi'/>
+			<img class='character' src='/resources/images/ldpi/{{.}}.png'/>
 		{{/characters}}
 	</h1>
 	<div class='stats'>
@@ -13,14 +13,14 @@
 	<h3>Hand</h3>
 	<div class='hand'>
 		{{#hand}}
-			<img class='card' src='/resources/images/{{.}}'/>
+			<img class='card' src='/resources/images/mdpi/{{.}}.png'/>
 		{{/hand}}
 	</div>
 	
 	<h3>City</h3>
 	<div class='city'>
 		{{#city}}
-			<img class='card' src='/resources/images/{{.}}'/>
+			<img class='card' src='/resources/images/mdpi/{{.}}.png'/>
 		{{/city}}
 	</div>
 </div>
