templates and template renaming
Should we use CamleCase or under_score?

--- a/client/web/templates/hand.html
+++ b/client/web/templates/hand.html
@@ -1,5 +1,3 @@
-<div class='hand'>
-    {{#.}}
-        <img class='card' src='/resources/images/mdpi/{{.}}.png'/>
-    {{/.}}
-</div>
+{{#.}}
+    <img class='card' src='/resources/images/mdpi/{{.}}.png' data-card='{{.}}'/>
+{{/.}}
