--- a/client/web/templates/board.html
+++ b/client/web/templates/board.html
@@ -1,3 +1,5 @@
-<button class='controller gold' data-option='TakeAction'>gold</button>
-<button class='controller districts' data-option='TakeAction'>district</button>
-<button class='controller endTurn' data-option='EndTurn'>End Turn</button>
+<div style='text-align:center;'>
+    <button class='controller gold' data-option='TakeAction'>gold</button>
+    <button class='controller districts' data-option='TakeAction'>district</button>
+    <button class='controller endTurn' data-option='EndTurn'>End Turn</button>
+</div>
