--- a/client/web/templates/option.html
+++ b/client/web/templates/option.html
@@ -1,5 +1,5 @@
 <li>
-    <button type='button' class='btn btn-primary' style='width:250px'>
+    <button type='button' class='btn btn-primary' style='width:250px' {{#disabled}}disabled='disabled'{{/disabled}}>
         {{Message}}
     </button>
 </li>
