--- a/client/web/templates/opponent.html
+++ b/client/web/templates/opponent.html
@@ -19,8 +19,8 @@
     
     <h3>City</h3>
     <div class='city'>
-        {{#city}}
+        <!--{{#city}}
             <img class='card' src='/resources/images/mdpi/{{.}}.png'/>
-        {{/city}}
+        {{/city}}-->
     </div>
 </div>
