--- a/client/web/templates/selection.html
+++ b/client/web/templates/selection.html
@@ -2,7 +2,7 @@
   <div class='modal-dialog'>
     <div class='modal-content'>
       <div class='modal-header'></div>
-      <div class='modal-body'></div>
+      <div class='equidistant modal-body'></div>
       <div class='modal-footer'>
         <button type='button' class='cancel btn btn-default' data-dismiss='modal'>Cancel</button>
         <button type='button' class='select btn btn-primary' data-dismiss='modal'>Select</button>
