--- a/client/web/templates/selectionCard.html
+++ b/client/web/templates/selectionCard.html
@@ -1,1 +1,1 @@
-<img width=100 class='img-thumbnail' src='/resources/images/mdpi/{{card}}.png' />
+<span><img width=100 class='img-thumbnail' src='/resources/images/mdpi/{{card}}.png' /></span>
