--- a/client/web/templates/opponent.html
+++ b/client/web/templates/opponent.html
@@ -1,26 +1,11 @@
 <div class='opponent'>
-    <h1>
-        {{username}}
-        {{#characters}}
-            <img class='character' src='/resources/images/ldpi/{{.}}.png'/>
-        {{/characters}}
-    </h1>
-    <div class='stats'>
-        <span class='gold'>{{gold}}</span>
-        <span class='points'>{{points}}</span>
-    </div>
+    <h1 class='characters'></h1>
     
+    <div class='stats'></div>
+
     <h3>Hand</h3>
-    <div class='hand'>
-        {{#hand}}
-            <img class='card' src='/resources/images/mdpi/{{.}}.png' data-card='{{.}}'/>
-        {{/hand}}
-    </div>
-    
+    <div class='hand'></div>
+
     <h3>City</h3>
-    <div class='city'>
-        <!--{{#city}}
-            <img class='card' src='/resources/images/mdpi/{{.}}.png'/>
-        {{/city}}-->
-    </div>
+    <div class='city'><div>
 </div>
