bugfix: character view now include points

--- a/client/web/templates/character.html
+++ b/client/web/templates/character.html
@@ -2,4 +2,5 @@
     <div class="abilityBtns" style="position:absolute; right:10px; top:10px"></div>
     <div class="character"></div>
     <div>Gold: <span class="goldcount"></span></div>
+    <div>Points: <span class="pointcount"></span></div>
 </div>
