--- a/client/web/html_design/styles/sass/main.scss
+++ b/client/web/html_design/styles/sass/main.scss
@@ -4,46 +4,25 @@
 $boardgreen   : #33CC33;
 $infobargreen : #003300;
 
+$app_width: 1366;
+$app_height: 768;
+$infobar_height: 37;
+$board_height: #{($app_height)-($infobar_height)};
+
+$board_opponents_height: 35%;
+$board_center_height: 20%;
+$board_player_height: 45%;
+
+$scoreboard_height: 30%;
+$terminal_height: 70%;
 ///////////////////////////////////////
 
-/*
-.equidistant {
-    width:100%;
-    display: table;
-    table-layout: fixed;    /* For cells of equal size
-  
-    span {
-        display: table-cell;
-        text-align: center;    
-    }
-}
-*/
-
-// TODO: use javascript instead---
-@mixin rotate($i) {
-    $xaxis : 0%;
-    $yaxis : 100%;
-    //transform-origin: $xaxis $yaxis;
-    //transform: rotate(#{ $deg }deg);
-    //-ms-transform-origin: $xaxis $yaxis;
-    //-ms-transform: rotate(#{ $deg }deg);
-    -webkit-transform-origin: 10% 250%;
-    -webkit-transform: rotate( -25 + $i*7 * 1deg);   
-    //-webkit-transform-origin: #{ -$i*$i*1.4 + 50*$unit} #{15+100*$unit};
-    //-webkit-transform: rotate(#{ -80 + $i*15 }deg); 
-}
-
-@mixin rotate2($deg) {
+// MIXINS
+@mixin rotate($deg) {
     $xaxis : 50%;
     $yaxis : 50%;
-    //transform-origin: $xaxis $yaxis;
-    //transform: rotate(#{ $deg }deg);
-    //-ms-transform-origin: $xaxis $yaxis;
-    //-ms-transform: rotate(#{ $deg }deg);
     -webkit-transform-origin: $xaxis $yaxis;
-    -webkit-transform: rotate( $deg * 1deg);   
-    //-webkit-transform-origin: #{ -$i*$i*1.4 + 50*$unit} #{15+100*$unit};
-    //-webkit-transform: rotate(#{ -80 + $i*15 }deg); 
+    -webkit-transform: rotate( $deg * 1deg) translate3d(0,0,0);   
 }
 
 @mixin card_overlap($dist) {
@@ -55,47 +34,8 @@ $infobargreen : #003300;
     }
 }
 
-.card_curved_overlap {
-     @for $i from 0 through 10 {
-        img:nth-child(#{$i}) {
-            position: absolute;
-            @include rotate($i);
-            z-index: $i; 
-        }            
-    }
-}   
-
-// centering
-/* This parent can be any width and height */
-.block {
-  text-align: center;
-}
- 
-/* The ghost, nudged to maintain perfect centering */
-.block:before {
-  content: '';
-  display: inline-block;
-  height: 100%;
-  vertical-align: middle;
-  margin-right: -0.25em; /* Adjusts for spacing */
-}
-
-/* The element to be centered, can
-   also be of any width and height */ 
-.centered {
-  display: inline-block;
-  vertical-align: middle;
-  width: 300px;
-}
-// centering
-
-// INDEPENDENT COMPONTENTS
-
+// INDEPENDENT CLASSES
 // disable responsive layout
-.container {
-    width: 1366px !important;
-}
-
 .icon {
     height: 25px;
     width: 25px;
@@ -109,11 +49,14 @@ html, body {
 }
 
 #app {
-    @extend .container;
+    height: #{$app_height}px !important;
+    width: #{$app_width}px !important;
     background: blue;   
+    @extend .container;
 }
 
 #infobar {
+    height: #{$infobar_height}px;
     background: $infobargreen;
     color: white;
     font-size: 20pt;
@@ -123,240 +66,182 @@ html, body {
     @extend .row;
         
     .current_player {
-        // background: brown;
         font-weight: bold;
         @extend .col-xs-2;
     }
     
     .status_message {
-        // background: tan;
         @extend .col-xs-4;
     }
     
     .status_values {
-        // background: teal;
         text-align: right;
         @extend .col-xs-4;
         @extend .col-xs-offset-2;
         
         .gold {
-            // background: white; 
             padding: 0px;
             @extend .col-xs-3;
             @extend .col-xs-offset-7;
         }
         .points {
-            // background: pink;
             padding: 0px;
             @extend .col-xs-2;
         }   
     }
 }
 
-// CONTENT
 #content {
-    
-    // BOARD
-    #board {
-        background: $boardgreen;  
-        //border: 1px solid black;
-        height: 731px; // 768-37
-        @extend .col-xs-9;
-        padding-top: 20px;
-             
-        .opponent { 
-            margin: 0px;
-            padding: 0px;
-            > div {
-                margin-left: 30px;
-            }
-            
-            height: 0.40*711px;
-            //background: brown;
-            //border: 1px dotted black;
-            
-            // PLAYER 1
-            &:nth-child(1) { 
-                position: relative;
-                left: 45px;
-                //top: 80px;
-                @include rotate2(-30);
-                //transform: rotate(-30deg);
-                //-ms-transform: rotate(-30deg); /* IE 9 */
-                //-webkit-transform: rotate(-30deg); /* Safari and Chrome */
-            }
-            
-            // PLAYER 2
-             &:nth-child(2) { 
-                position: relative;
-                left: 22.5px; 
-            }
-            
-            // PLAYER 3
-            &:nth-child(3) { 
-                position: relative;
-                left: 0px; 
-                top: 80px;
-                @include rotate2(30);
-                //transform: rotate(30deg);
-                //-ms-transform: rotate(30deg); /* IE 9 */
-                //-webkit-transform: rotate(30deg); /* Safari and Chrome */
-            }
-            
-            .pid {
-                margin-bottom: 10px;   
-            }
-            
-            .districts {
-                margin-top: 20px;  
-                margin-left: 1px;
-                 
-                img {
-                    position: absolute;   
-                    width: 65px;
-                    
-                    &:hover {
-                        z-index: 999 !important;
-                        width: 100px; // zoom?
-                        //top: 10px; 
-                    }
-                }
-                
-                @include card_overlap(30);
-            }
-             
-            .hand {
-                position: relative; 
-                
-                img {
-                    position: absolute;
-                }
-                
-                @include card_overlap(15);
-            }
+    height: #{$board_height}px;
+}
+
+#board {
+    background: $boardgreen;  
+    height: 100%;
+    @extend .col-xs-9;
+    padding: 30px;
+//    padding-top: 20px;
+         
+    #opponents {
+        height: $board_opponents_height;
+    }
+
+    .opponent { 
+        
+        .hand, .districts {
+            background: blue;
+            border: 1px solid red;
+            text-align: center; /*also hits images*/
         }
         
-        .player {
-            height: 0.60*711px;
-            background: $boardgreen;
-            //border: 1px dotted black;  
-            padding-top: 85px;
-            padding-left: 20px;
-            
-            .districts img, .hand img {
-                width: 100px;   
-                margin-bottom: 5px
-            }
-            
-            .districts {
-                @extend .block;   
-            }
-            
-            .hand {  
-                padding-top: 55px;
-                position: absolute;
-                right: -190px;
-                padding-left: 30px;
-                @extend .card_curved_overlap;  
-            }
+        .hand {
+            padding-right: 16.66667%; // col-xs-2: width  
         }
         
-        .center {
-            //height: 1px;
-            width: 200px;
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            margin-top: -0.5 * 200px;
-            margin-left: -0.5 * 200px;
-            // background: tan;
-            // border: 1px dotted black;
-            
-            .gold {
-                margin-top: 21px;    
+        .districts {
+            @include card_overlap(30);   
+        }
+        
+        // PLAYER 1
+        &:nth-child(1) { 
+//            position: relative;
+//            left: 45px;
+//            @include rotate(-30);
+        }
+        
+        // PLAYER 2
+         &:nth-child(2) { 
+//            position: relative;
+//            left: 22.5px; 
+        }
+        
+        // PLAYER 3
+        &:nth-child(3) { 
+//            position: relative;
+//            left: 30px; 
+//            top: 80px;
+            //@include rotate(30);
+        }
+        
+        .pid {
+//            margin-bottom: 10px;   
+        }
+        
+        .districts {
+//            padding: 0px;
+//            margin-top: 20px;  
+//            margin-left: 1px;
+             
+            .card {
+                width: 65px;
             }
-        }   
+            
+            @include card_overlap(30);
+        }
+         
+        .hand {            
+            @include card_overlap(15);
+        }
     }
     
-    // SIDEBAR
-    #sidebar {
-        padding: 0px;
-        background: lightgrey;
-        //border: 1px solid black;
-        height: 100%;
-        @extend .col-xs-3;
+    #board_player {
+        height: $board_player_height;
+        background: $boardgreen;
+//        padding-top: 85px;
+//        padding-left: 20px;
         
-        // TERMINAL
-        #terminal {
-            color: lightgray;
-            background: black;
-            opacity: 0.7;
-            height: 551px;
-            padding: 20px 10px 0px;
-            &::-webkit-scrollbar { width: 0 !important }
-            overflow-y: scroll;
-             
-            ul {  
-                list-style: none;
-                li {
-                    text-indent:-10px;
-                    padding-bottom: 10px;
-                    font-family: "Lucida Console";
-                    &:before {
-                        content: ">";        
-                        position: relative; left:-15px;
-                    }
-                }
-            }
+        .card {
+            width: 100px;   
+            margin-bottom: 5px
+        }
+    }
+    
+    #board_center {
+        height: $board_center_height;
+        width: 200px;
+        margin: auto;
+    
+        .gold {
+            padding-top: 21px;    
+        }
+    }   
+}
+
+#sidebar {
+    padding: 0px;
+    background: lightgrey;
+    height: 100%;
+    @extend .col-xs-3;
+        
+    #scoreboard {
+        font-size: 20px;
+        padding: 20px 0 20px;
+        height: $scoreboard_height;
+                        
+        table {
+            vertical-align: middle;
+            width: 100%;
+        } 
+        
+        td, th {
+            text-align: center; 
+            vertical-align: middle;
         }
         
-        // SCOREBOARD
-        #scoreboard {
-            //background: orange;  
-            font-size: 20px;
-            padding: 20px 0 20px;
-            height: 180px;
-                    
-            table {
-                vertical-align: middle;
-                width: 100%;
-            } 
-            
-            td, th {
-                text-align: center; 
-                vertical-align: middle;
-            }
-            
-            // first column
-            th:nth-child(2), td:nth-child(2) {
-                text-align: left;
-            }
-            
-            tr.me {
-                font-weight: bold;
-            }
+        // first column
+        th:nth-child(2), td:nth-child(2) {
+            text-align: left;
+        }
+        
+        tr.me {
+            font-weight: bold;
+        }
 
-            tr.current_player {
-                color: red;
+        tr.current_player {
+            color: red;
+        }
+    }
+
+    #terminal {
+        color: lightgray;
+        background: black;
+        opacity: 0.7;
+        height: $terminal_height;
+        padding: 20px 10px 0px;
+        &::-webkit-scrollbar { width: 0 !important }
+        overflow-y: scroll;
+         
+        ul {  
+            list-style: none;
+            li {
+                text-indent:-10px;
+                padding-bottom: 10px;
+                font-family: "Lucida Console";
+                &:before {
+                    content: ">";        
+                    position: relative; left:-15px;
+                }
             }
         }
     }
-}
-            
-#content #board .player .hand img:hover {
-    //width: 110px !important;
-    zoom: 1.2;
-    z-index: 999;
-    -webkit-box-shadow: 1px 1px 7px rgba(0,0,0,0.4);
-    box-shadow: 3px 3px 7px rgba(0,0,0,0.4); 
-}
-
-.card:hover {
-    cursor: pointer; 
-}
-
-.card{
-    border-radius: 10px;
-    //-webkit-box-shadow: 5px 5px rgba(0,0,0,0.3);
-    //box-shadow: 5px 5px rgba(0,0,0,0.3);
 }
