--- a/client/web/client_working_prototype/templates/app.html
+++ b/client/web/client_working_prototype/templates/app.html
@@ -186,49 +186,7 @@
             </div>
         </section>
         <aside id='sidebar'>
-            <div id='scoreboard'>
-                <table>
-                    <thead>
-                        <tr>
-                            <th></th>
-                            <th></th>
-                            <th>
-                                <img src='img/two_coins.png' class='icon' />
-                            </th>
-                            <th>
-                                <img src='img/points.png' class='icon' />
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td></td>
-                            <td>rko</td>
-                            <td>3</td>
-                            <td>8</td>
-                        </tr>
-                        <tr class='king'>
-                            <td><img src='img/crown.png' class='icon'/></td>
-                            <td>tugend</td>
-                            <td>9</td>
-                            <td>11</td>
-                        </tr>
-                        <tr class='current_player'>
-                            <td></td>
-                            <td>mis</td>
-                            <td>6</td>
-                            <td>3</td>
-                        </tr>
-                        <tr class='me'>
-                            <td></td>
-                            <td>afk</td>
-                            <td>10</td>
-                            <td>12</td>
-                        </tr>
-                    </tbody>
-                </table>
-                <img class='logo' src='img/logo.png' />
-            </div>                    
+            <div id='scoreboard'></div>                    
             <div id='terminal'>
                 <ul>
                     <li>terminal for messages</li>
