--- a/client/web/client_working_prototype/styles/sass/main.scss
+++ b/client/web/client_working_prototype/styles/sass/main.scss
@@ -165,6 +165,7 @@ html, body {
         
         .districts .card {
             width: 65px;
+            margin-right: 5px;
         }
          
         .hand .card, .opponent_info {
