--- a/client/web/client_working_prototype/templates/app.html
+++ b/client/web/client_working_prototype/templates/app.html
@@ -26,116 +26,7 @@
     </nav>             
     <div id='content' class='row'> <!--todo: remove this div-->
         <section id='board'>
-            <div id='opponents' class='row'>
-                <div class='opponent'>
-                    <div class='row'>
-                        <div class='info'>
-                            <div class='pid'>rko</div>    
-                            <div class='token'>
-                                <img src='img/magician_icon.png' 
-                                     class='img-circle' />
-                            </div>
-                        </div>
-                        <div class='hand'>
-                            <div class='card-overlay'>0</div>
-                            <img class='card'
-                                 src='img/facedown2.png'/>
-                        </div>
-                    </div>
-                    <div class='row'>
-                        <div class='districts'>
-                            <img class='card'
-                                 src='img/church.png' />
-                            <img class='card'
-                                 src='img/harbor.png' />
-                            <img class='card grayscale'
-                                 src='img/facedown2.png' />
-                            <img class='card grayscale'
-                                 src='img/facedown2.png' />
-                            <img class='card grayscale'
-                                 src='img/facedown2.png' />
-                            <img class='card grayscale'
-                                 src='img/facedown2.png' />
-                            <img class='card grayscale'
-                                 src='img/facedown2.png' />
-                            <img class='card grayscale'
-                                 src='img/facedown2.png' />
-                        </div>
-                    </div>
-                </div>
-                <div class='opponent'>
-                    <div class='row'>
-                        <div class='info'>
-                            <div class='pid'>rko</div>    
-                            <div class='token'>
-                                <img src='img/king_icon.png' 
-                                     class='img-circle' />
-                            </div>
-                        </div>
-                        <div class='hand'>
-                            <div class='card-overlay'>6</div>
-                            <img class='card'
-                                 src='img/facedown2.png' />
-                        </div>
-                    </div>
-                    <div class='row'>
-                        <div class='districts'>
-                            <img class='card'
-                                 src='img/church.png' />
-                            <img class='card'
-                                 src='img/harbor.png' />
-                            <img class='card'
-                                 src='img/prison.png' />
-                            <img class='card'
-                                 src='img/castle.png' />
-                            <img class='card grayscale'
-                                 src='img/facedown2.png' />
-                            <img class='card grayscale'
-                                 src='img/facedown2.png' />
-                            <img class='card grayscale'
-                                 src='img/facedown2.png' />
-                            <img class='card grayscale'
-                                 src='img/facedown2.png' />
-                        </div>
-                    </div>
-                </div>
-                <div class='opponent'>
-                    <div class='row'>
-                        <div class='info'>
-                            <div class='pid'>rko</div>    
-                            <div class='token'>
-                                <img src='img/assassin_icon.png' 
-                                     class='img-circle' />
-                            </div>
-                        </div>
-                        <div class='hand'>
-                            <div class='card-overlay'>4</div>
-                            <img class='card'
-                                 src='img/facedown2.png' />
-                        </div>
-                    </div>
-                    <div class='row'>
-                        <div class='districts'>
-                            <img class='card '
-                                 src='img/observatory.png' />
-                            <img class='card grayscale'
-                                 src='img/facedown2.png' />
-                            <img class='card grayscale'
-                                 src='img/facedown2.png' />
-                            <img class='card grayscale'
-                                 src='img/facedown2.png' />
-                            <img class='card grayscale'
-                                 src='img/facedown2.png' />
-                            <img class='card grayscale'
-                                 src='img/facedown2.png' />
-                            <img class='card grayscale'
-                                 src='img/facedown2.png' />
-                            <img class='card grayscale'
-                                 src='img/facedown2.png' />
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div id='opponents' class='row'></div>
             <div id='board_center' class='row'>
                 <div class='gold'>
                     <img src='img/many_coins.png' />
