--- a/client/web/client_working_prototype/templates/card.html
+++ b/client/web/client_working_prototype/templates/card.html
@@ -1,1 +1,1 @@
-<img class='card img-thumbnail' data-card_type='{{.}}' src='/resources/images/mdpi/{{.}}.png'/>
+<img class='card' data-card_type='{{.}}' src='/resources/images/mdpi/{{.}}.png'/>
