--- a/client/web/client_working_prototype/templates/app.html
+++ b/client/web/client_working_prototype/templates/app.html
@@ -37,42 +37,9 @@
                 </div>
             </div>
             <div id='board_player' class='row'>
-                <div class='districts'>
-                    <img class='card'
-                         src='img/temple.png' />
-                    <img class='card'
-                         src='img/school_of_magic.png' />
-                    <img class='card'
-                         src='img/watchtower.png' />
-                    <img class='card'
-                         src='img/manor.png' />
-                    <img class='card grayscale'
-                         src='img/facedown2.png' />
-                    <img class='card grayscale'
-                         src='img/facedown2.png' />
-                    <img class='card grayscale'
-                         src='img/facedown2.png' />
-                    <img class='card grayscale'
-                         src='img/facedown2.png' />
-                </div>
+                <div class='city'></div>
                 <div class='col-xs-6 text-center'>
-                    <div class='hand'>
-                        <img class='card'
-                             src='img/battlefield.png' />
-                        <img class='card'
-                             src='img/castle.png' />
-                        <img class='card'
-                             src='img/church.png' />
-                        <img class='card'
-                             src='img/graveyard.png' />
-                        <img class='card'
-                             src='img/cathedral.png' />
-                        
-                        <img class='card grayscale'
-                             src='img/facedown2.png' />
-                        <img class='card grayscale'
-                             src='img/facedown2.png' />                    
-                    </div>
+                    <div class='hand'></div>
                 </div>
             </div>
         </section>
