--- a/client/web/client_working_prototype/templates/opponent.html
+++ b/client/web/client_working_prototype/templates/opponent.html
@@ -16,6 +16,6 @@
         </div>
     </div>
     <div class='row'>
-        <div class='districts'></div>
+        <div class='city'></div>
     </div>
 </div>
